# shuup

./: .coveragerc  .dockerignore  .eslintignore  .eslintrc  .git-blame-ignore-revs  .gitignore  .jscsrc  .jshintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CLA.md  CLA.rst  ChangeLog.md  ChangeLog.rst  Dockerfile  Dockerfile-dev  ES2-README.md  MANIFEST.in  README.md  README.rst  VENDOR-LICENSES.md  build-all.py  build_resources.py  docker-compose-dev.yml  docker-compose.yml  env.example  generate_apidoc.py  nodejs_verify.py  package.json  pyproject.toml  requirements-dev.txt  requirements-doc.in  requirements-doc.txt  requirements-tests.txt  setup.cfg  setup.py  shoop-to-shuup.sql  sonar-project.properties  (+2 more)
.github/workflows/: pypi.yml  shuup.yml
.scannerwork/: report-task.txt
.tx/: config
ES2_2023-2_videosEreadmes/: ES2-INSTALATION.md
_misc/: check_sanity.py  doccov.py  ensure_code_style.py  ensure_fk_style.py  ensure_license_headers.py  ensure_unicode_literals.py  gather_i18n.py  language_twister.py  sanity_utils.py
branding/: generate_variants.py
doc/: Makefile  addons.rst  changelog.rst  changes.rst  conf.py  data_model.rst  dev_tools.rst  getting_started.rst  getting_started_dev.rst  glossary.rst  index.rst  make.bat  notify_specification.rst  prices_and_taxes.rst  prices_and_taxes_implementation.rst  provides.rst  services.rst  shoop-changelog.rst  taxes.rst  templates.rst  themes.rst  web_api.rst
doc/_ext/: django_sphinx.py  djangodocs.py  shoop_introspection_helper.py  (+1 more)
doc/ref/: units.rst  (+11 more)
shoop/: __init__.py  babel.cfg  configuration.py  version.py
shoop_setup_utils/: __init__.py  commands.py  excludes.py  finding.py  nodejs_verify.py  parsing.py  resource_building.py  versions.py
shoop_tests/: conftest.py
shoop_workbench/: __main__.py  urls.py  wsgi.py
shuup/: __init__.py  configuration.py  setting_keys.py
shuup_setup_utils/: __init__.py  commands.py  excludes.py  finding.py  nodejs_verify.py  parsing.py  resource_building.py  versions.py
shuup_tests/: conftest.py  test_fixture.json
shuup_workbench/: __main__.py  test_settings.py  test_urls.py  urls.py  wsgi.py
workbench/: __main__.py  wsgi.py
(+4957 files in other folders)
