[bdist_wheel]
universal = 1

[flake8]
exclude = dist,build,migrations,docs,venv,node_modules,shuup_tests,.tox,.git
max-line-length = 120
extend-ignore = E203, W503
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE=shuup_workbench.test_settings
django_find_project = false
norecursedirs = bower_components node_modules .git venv

[coverage:run]
branch = True
omit = */migrations/*,*/testing/browser_utils*,.tox/*

[build-system]
requires = ["setuptools", "wheel"]
